{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 35,
  "lineage": "af19118e-946b-e873-8e99-2273887e75b3",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002f6e91abff6eb96",
            "arn": "arn:aws:ec2:ap-south-1:135808925711:instance/i-04cea26d2af437cfe",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cea26d2af437cfe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06cf4922a2818d1f8",
            "private_dns": "ip-10-0-1-104.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.104",
            "public_ip": "15.206.170.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0311b31fbceb20057",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd89f588c607a18f",
            "tags": {
              "Name": "web_1"
            },
            "tags_all": {
              "Name": "web_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e574a00a44917553"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002f6e91abff6eb96",
            "arn": "arn:aws:ec2:ap-south-1:135808925711:instance/i-0ecb704e955716aa8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ecb704e955716aa8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007a5514c9a16be86",
            "private_dns": "ip-10-0-2-74.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.74",
            "public_ip": "13.235.87.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04917307d81d6db6a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089201ace31046723",
            "tags": {
              "Name": "web_2"
            },
            "tags_all": {
              "Name": "web_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e574a00a44917553"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "myalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:loadbalancer/app/tf-lb-2025041218051818920000000b/3f13a4e5b9abf061",
            "arn_suffix": "app/tf-lb-2025041218051818920000000b/3f13a4e5b9abf061",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-2025041218051818920000000b-1113661426.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:loadbalancer/app/tf-lb-2025041218051818920000000b/3f13a4e5b9abf061",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-2025041218051818920000000b",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e574a00a44917553"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-089201ace31046723"
              },
              {
                "subnet_id": "subnet-0bd89f588c607a18f"
              }
            ],
            "subnets": [
              "subnet-089201ace31046723",
              "subnet-0bd89f588c607a18f"
            ],
            "tags": {
              "Name": "application_lb"
            },
            "tags_all": {
              "Name": "application_lb"
            },
            "vpc_id": "vpc-06609ced7c8a74664",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:listener/app/tf-lb-2025041218051818920000000b/3f13a4e5b9abf061/f2a90a45e375451c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:targetgroup/tf-20250412180511610800000001/55eb1895ab2d2ea8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:listener/app/tf-lb-2025041218051818920000000b/3f13a4e5b9abf061/f2a90a45e375451c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:loadbalancer/app/tf-lb-2025041218051818920000000b/3f13a4e5b9abf061",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.myalb",
            "module.elb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:targetgroup/tf-20250412180511610800000001/55eb1895ab2d2ea8",
            "arn_suffix": "targetgroup/tf-20250412180511610800000001/55eb1895ab2d2ea8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:targetgroup/tf-20250412180511610800000001/55eb1895ab2d2ea8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:135808925711:loadbalancer/app/tf-lb-2025041218051818920000000b/3f13a4e5b9abf061"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250412180511610800000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:targetgroup/tf-20250412180511610800000001/55eb1895ab2d2ea8-20250412182204285800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:targetgroup/tf-20250412180511610800000001/55eb1895ab2d2ea8",
            "target_id": "i-04cea26d2af437cfe"
          },
          "dependencies": [
            "module.ec2.aws_instance.web_1",
            "module.elb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:targetgroup/tf-20250412180511610800000001/55eb1895ab2d2ea8-20250412182205499300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:135808925711:targetgroup/tf-20250412180511610800000001/55eb1895ab2d2ea8",
            "target_id": "i-0ecb704e955716aa8"
          },
          "dependencies": [
            "module.ec2.aws_instance.web_2",
            "module.elb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d778af569d31d0cf",
            "arn": "arn:aws:ec2:ap-south-1:135808925711:elastic-ip/eipalloc-0d778af569d31d0cf",
            "association_id": "eipassoc-063c38d274d23ac1b",
            "domain": "vpc",
            "id": "eipalloc-0d778af569d31d0cf",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03d71d5219a71a811",
            "private_dns": "ip-10-0-1-177.ap-south-1.compute.internal",
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-13-232-195-178.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.195.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f402252969310519",
            "arn": "arn:aws:ec2:ap-south-1:135808925711:elastic-ip/eipalloc-0f402252969310519",
            "association_id": "eipassoc-0b477efc91062a834",
            "domain": "vpc",
            "id": "eipalloc-0f402252969310519",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e973860eda79e25d",
            "private_dns": "ip-10-0-2-213.ap-south-1.compute.internal",
            "private_ip": "10.0.2.213",
            "public_dns": "ec2-13-232-110-143.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.110.143",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:internet-gateway/igw-024634ec2cd9446c3",
            "id": "igw-024634ec2cd9446c3",
            "owner_id": "135808925711",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d778af569d31d0cf",
            "association_id": "eipassoc-063c38d274d23ac1b",
            "connectivity_type": "public",
            "id": "nat-007ee4ea23fd46771",
            "network_interface_id": "eni-03d71d5219a71a811",
            "private_ip": "10.0.1.177",
            "public_ip": "13.232.195.178",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bd89f588c607a18f",
            "tags": {
              "Name": "NAT_GW_1"
            },
            "tags_all": {
              "Name": "NAT_GW_1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f402252969310519",
            "association_id": "eipassoc-0b477efc91062a834",
            "connectivity_type": "public",
            "id": "nat-0045f6f684e05a078",
            "network_interface_id": "eni-0e973860eda79e25d",
            "private_ip": "10.0.2.213",
            "public_ip": "13.232.110.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-089201ace31046723",
            "tags": {
              "Name": "NAT_GW_2"
            },
            "tags_all": {
              "Name": "NAT_GW_2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:route-table/rtb-0adaf5e0b3f957c1e",
            "id": "rtb-0adaf5e0b3f957c1e",
            "owner_id": "135808925711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-007ee4ea23fd46771",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_1"
            },
            "tags_all": {
              "Name": "private_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:route-table/rtb-02d72c012305fd5f4",
            "id": "rtb-02d72c012305fd5f4",
            "owner_id": "135808925711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0045f6f684e05a078",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_2"
            },
            "tags_all": {
              "Name": "private_rt_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_nat_gateway.nat_2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:route-table/rtb-00a3b34da0502f50f",
            "id": "rtb-00a3b34da0502f50f",
            "owner_id": "135808925711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024634ec2cd9446c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt_1"
            },
            "tags_all": {
              "Name": "public_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:route-table/rtb-04f5c19733021b78d",
            "id": "rtb-04f5c19733021b78d",
            "owner_id": "135808925711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024634ec2cd9446c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt_2"
            },
            "tags_all": {
              "Name": "public_rt_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4aa32c380ca0dfb",
            "route_table_id": "rtb-0adaf5e0b3f957c1e",
            "subnet_id": "subnet-046dc635e94c0c62d"
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip1",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024c0275927b66039",
            "route_table_id": "rtb-02d72c012305fd5f4",
            "subnet_id": "subnet-084c5bc8bc314f00e"
          },
          "dependencies": [
            "module.vpc.aws_eip.myeip2",
            "module.vpc.aws_nat_gateway.nat_2",
            "module.vpc.aws_route_table.private_rt_2",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d0a168d0ad54c74",
            "route_table_id": "rtb-00a3b34da0502f50f",
            "subnet_id": "subnet-0bd89f588c607a18f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e528754a48adec0",
            "route_table_id": "rtb-04f5c19733021b78d",
            "subnet_id": "subnet-089201ace31046723"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt_2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:security-group/sg-0cc9fdbb1840c07c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc9fdbb1840c07c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250412180511815900000002",
            "name_prefix": "terraform-",
            "owner_id": "135808925711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mysql"
            },
            "tags_all": {
              "Name": "allow_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:security-group/sg-0e574a00a44917553",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e574a00a44917553",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250412180511915500000003",
            "name_prefix": "terraform-",
            "owner_id": "135808925711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:subnet/subnet-046dc635e94c0c62d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046dc635e94c0c62d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808925711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:subnet/subnet-084c5bc8bc314f00e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084c5bc8bc314f00e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808925711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:subnet/subnet-0bd89f588c607a18f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd89f588c607a18f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808925711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:subnet/subnet-089201ace31046723",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089201ace31046723",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808925711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-06609ced7c8a74664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808925711:vpc/vpc-06609ced7c8a74664",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0438efcb4a46605fe",
            "default_route_table_id": "rtb-0eca278106d4d3da3",
            "default_security_group_id": "sg-0b5eb66848f6246c8",
            "dhcp_options_id": "dopt-05e12b5992c9f6c00",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06609ced7c8a74664",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eca278106d4d3da3",
            "owner_id": "135808925711",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}